--- a/force-app/main/default/lwc/home/home.html
+++ b/force-app/main/default/lwc/home/home.html
@@ -3,7 +3,7 @@
     <div class="c-container">
 
         <div class="slds-var-m-around_medium">
-            <h1 class="slds-text-heading_large">COVID Vaccine Manager Portal</h1>
+            <h1 class="slds-text-heading_large">SPA LWC App</h1>
             <h1 class="slds-text-heading_small">Begin by selecting your location</h1>
         </div>
         <div class="slds-var-m-around_medium" onkeyup={handleKeyUp}>
